testWorkloads/nginxIngress/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /mwh
        pathType: Prefix
        backend:
          service:
            name: webhook-instrumentor
            port:
              number: 443
